--- a/app/styles/cohorts/addCohort/addCohort.module.css
+++ b/app/styles/cohorts/addCohort/addCohort.module.css
@@ -2,14 +2,14 @@
 
 .container {
   background-color: #c6e7e7;
-  padding: 40px;
+  padding: 20px;
   border-radius: 10px;
   width: 60%;
   max-width: 800px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   position: relative;
   margin-left: 250px;
-  height: 100vh;
+  height: 100%;
   /* Semi-transparent background */
 
 }
@@ -40,7 +40,7 @@
 
 .label {
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
   color: #000;
 }
 .forms {
@@ -73,6 +73,14 @@
   gap: 20px;
   width: 100%;
   margin-top: 20px;
+}
+.buttons2{
+  display: flex;
+  justify-content: flex-start;
+  gap: 30px;
+  width: 100%;
+  margin-top: 3px;
+  margin-left : -80px;
 }
 .facilitator{
   display: flex;
@@ -114,20 +122,26 @@
 .deleteButton {
   align-items: center;
   margin-left: 280px;
+  background-color: #ff0000;
+}
+.deleteButton:hover{
   background-color: #1b9392;
 }
 
 .addButton:hover {
-  background-color: #006666;
+  background-color: #ff7211;
 }
 
 .createButton:hover {
-  background-color: #d65a00;
+  background-color: #1b9392;
+}
+.submitButtons:hover{
+  background-color: #1b9392;
 }
 .title{
   align-items: center;
-  margin-bottom: 10px;
-  margin-top: 20px;
+  margin-bottom: 5px;
+  margin-top: 3px;
 margin-left: 250px;
 font-size: 20px;
   font-weight: bold;
@@ -135,22 +149,22 @@ font-size: 20px;
 }
 .facilitatorRoleSelection {
   display: flex;
-  gap: 150px; /* Space between elements */
+  gap: 230px; /* Space between elements */
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
-/*.addFacilitatorRoleButton {*/
-/*  !*padding: 8px;*!*/
-/*  padding: 12px 20px;*/
-/*  background-color: #1b9392;*/
-/*  color: white;*/
-/*  border: none;*/
-/*  border-radius: 5px;*/
-/*  cursor: pointer;*/
-/*  transition: background 0.3s;*/
-/*}*/
+.addFacilitatorRoleButton {
+  /*padding: 8px;*/
+  padding: 12px 20px;
+  background-color: #1b9392;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
 
 .addFacilitatorRoleButton:hover {
   background-color: #ff7211;
@@ -186,7 +200,7 @@ font-size: 20px;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
   display: flex;
   align-items: center;
