--- a/app/styles/borrow/singlepage/singlepage.module.css
+++ b/app/styles/borrow/singlepage/singlepage.module.css
@@ -1,11 +1,11 @@
 /* singlepage.module.css */
 
 .container {
-    background: #1B9392;
+    /* background: #1B9392; */
     margin: 20px auto;
     border-radius: 15px;
     padding: 30px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 1200px;
   }
   
