--- a/app/styles/components/components.module.css
+++ b/app/styles/components/components.module.css
@@ -1,197 +1,4 @@
-/* .container {
  
-   margin-top: 0;
-   padding: 20px;
-   margin-right: -12px;
- }
-
-.top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-  margin-top: 1px;
-}
-
- 
-.input {
-  background-color: transparent;
-  border: none;
-  color: var(--text);
-  outline: none;
-  padding: 4px;
-  width: 160px; 
-  padding-left: 0;
-}
-
-.search {
-  display: flex;
-  align-items: center;
-  gap: 2px;
-  background-color: #c6e7e7;
-   padding: 1px 8px;
-  border-radius: 25px;
-  justify-content: start;
-  width: 200px;
-  margin-left: -25px;
-}
-
-.Search {
-  display: flex;
-  align-items: center;
-  gap: 2px;
-  background-color: #c6e7e7;
-   padding: 1px 8px;
-  border-radius: 25px;
-  justify-content: start;
-  width: 200px;
-  margin-left: -25px;
-}
-
-
-.btn{
-  display:flex;
-  gap :15px;
-  margin-right: 26px;
-   
-}
-
-.addButton {
-  background-color: #ff7211;
-  color: var(--text);
-  padding: 5px 5px; 
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-   width: clamp(40px, 11vw, 128px);
- }
-
- 
-
-.addButton:hover {
-  background-color: #C6E7E7;
-}
-
-.select {
-  border:2px solid black;
-  border-radius:5px;
-  width: clamp(180px, 50vw, 380px);  
-  height:40px;
-
-}
-
-.suspense {
-  border:2px solid black;
-  border-radius:5px;
-  width: clamp(180px, 50vw, 380px);  
-  height:40px;
-  background-color: #069b49;
-}
-
-.search{
-  border:2px solid black;
-  border-radius:5px;
-  width: clamp(180px, 50vw, 380px); 
-  height:40px;
-  background-color: #069b49;
-
-}
-
-.h2{
-  font-weight: bold;
-  font-size: clamp(0.875rem, 2vw, 1.5rem);
-}
-.table {
-  width: 100%;
-  border-collapse: collapse;
- 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  min-height:200px;
-  overflow:hidden;
-  color: #ffffff;
-  margin-left: -26px;
-}
-.option{
-  padding: 22px;
-  
-}
-
-.table thead{
-  background-color: #1B9392;
-  color: #ffffff;
- 
-}
-
-.table th,
-.table td {
-  padding: 12px 40px;
-  text-align: left;
-  border-bottom: 1px solid var(--border);
-  font-size: 14px;
-}
-
-.table th {
-  background-color: var(--bgAccent);
-  font-weight: bold;
-  color: var(--textAccent);
-}
-
-.table tbody tr:nth-child(even) {
-  background-color: #f0f0f0;
-   color: #000000;
-  font-weight: 600;
-}
-
-.table tbody tr:nth-child(odd) {
-    color: #000000;
-   font-weight: 600;
-}
-
-
- 
-
-.button {
-  padding: 5px 10px;
-  background-color: #C6E7E7;
-  color: var(--text);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-right: 10px; 
-}
-
-.button:last-child {
-  margin-right: 10px;  
-}
-
-.button:hover {
-  background-color: darkcyan;
-}
-
-.badge {
-  display: inline-block;
-  padding: 5px 10px;
-  border-radius: 20px;
-  font-size: 10px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.inStock {
-  background-color: #069b49;
-  color: white;
-}
-
-.outOfStock {
-  background-color: crimson;
-  color: white;
-} */
-
-
-
-
 /* General Container */
 .container {
   margin-top: 0;
@@ -304,7 +111,8 @@
 }
 
 .table th, .table td {
-  padding: 12px 40px;
+  padding: 10px 30px;
+  /* padding:5px; */
   text-align: left;
   border-bottom: 1px solid var(--border);
   font-size: 14px;
