--- a/app/styles/components/productHistory/productHistory.module.css
+++ b/app/styles/components/productHistory/productHistory.module.css
@@ -14,18 +14,26 @@
 }
 .componentDetails {
   background: linear-gradient(145deg, var(--bgSoft), var(--bgAccent));
-  /* border-radius: 5px; */
-  padding: 20px;
+   padding: 20px;
   margin:20px  0px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: #C6E7E7;
+  /* display: flex;
+  gap: 150px;
+  padding-left: 100px; */
+ }
+ .name{
+  font-size: 30px;
+  color: #1B9392;
+ }
+
+ .componentDetail{
   display: flex;
   gap: 150px;
-  padding-left: 100px;
-  /* justify-content: space-between; */
-}
+  /* padding-left: 50px; */
 
+ }
 .componentDetails h2 {
   color: var(--textAccent);
   font-size: 24px;
@@ -51,7 +59,6 @@
 
 .historyTable thead{
   background-color: #1B9392;
-
 
 }
 
