--- a/app/styles/condition/condition.module.css
+++ b/app/styles/condition/condition.module.css
@@ -88,7 +88,7 @@
      left: 0;
      width: 100%;
      height: 100%;
-     /* background-color: rgba(0, 0, 0, 0.5); */
+     /* background-color: #1B9392; */
      display: flex;
      justify-content: center;
      align-items: center;
@@ -96,7 +96,8 @@
    }
    
    .popupContent {
-     background-color: white;
+     /* background-color: white; */
+     background-color: #C6E7E7;
      padding: 30px;
      border-radius: 8px;
      max-width: 500px;
@@ -123,6 +124,7 @@
      color: #555;
    }
    
+    
    .formGroup input ,
    .formGroup select {
      width: 100%;
@@ -130,7 +132,7 @@
      border: 1px solid #ddd;
      border-radius: 4px;
      font-size: 16px;
-     color:black;
+     color:#1B9392;
    }
    
    .popupActions {
