--- a/app/styles/students/Student.module.css
+++ b/app/styles/students/Student.module.css
@@ -22,6 +22,16 @@
   margin-left: 400px;
     align-items: center;
     justify-content: space-between;
+    /*height: 50px;*/
+}
+.horizontalFilters{
+    /*height: 50px;*/
+}
+.filterField{
+    height: 50px;
+}
+.text{
+    font-size: 10px;
 }
 @media screen and (min-width: 1545px) {
     .filterSection {
@@ -72,6 +82,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s ease-in-out;
+    font-size: 15px;
 }
 
 .downloadButton:hover {
@@ -86,6 +97,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s ease-in-out;
+    font-size: 15px;
     /*margin-top: 10px;*/
 }
 
