--- a/app/styles/students/addStudent/addStudent.module.css
+++ b/app/styles/students/addStudent/addStudent.module.css
@@ -33,7 +33,7 @@
   border: none;
   font-size: 20px;
   cursor: pointer;
-  color: #c6e7e7; /* Ensure the text is visible */
+  color: #ff7211; /* Ensure the text is visible */
   font-weight: bold;
 }
 
@@ -49,7 +49,7 @@
 }
 
 .form {
-  background-color: #0f8b8d;
+  background-color: #c6e7e7;
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -66,17 +66,18 @@
   display: flex;
   flex-direction: column;
   /*gap: 5px;*/
+  height: 40px;
 }
 
 .label {
   color: #000000;
-  font-weight: bold;
-  margin-bottom: 10px;
+  font-weight:500;
+  margin-bottom: 5px;
 }
 
 .divInput input, .divInput select {
   /*width: 100%;*/
-  padding: 5px;
+  padding: 15px;
   border-radius: 5px;
   border: none;
   outline: none;
@@ -93,9 +94,10 @@
   font-weight: bold;
   cursor: pointer;
   transition: 0.3s ease-in-out;
-  margin-top: 5px;
+  margin-top: 20px;
   text-align: center;
   display: inline-block;
+  height: 40px;
 }
 .submitButtons{
   padding: 5px 10px;
@@ -107,7 +109,8 @@
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
-  margin-top: 30px;
+  margin-top: 80px;
+  align-items: flex-end;
 }
 
 .addCohortButton:hover, .submitButton:hover {
