--- a/app/styles/students/singleStudent/Facilitator.module.css
+++ b/app/styles/students/singleStudent/Facilitator.module.css
@@ -11,7 +11,7 @@
     background: #008080;
     color: white;
     padding: 20px;
-    text-align: center;
+    text-align: start ;
     border-radius: 10px;
 }
 
