--- a/app/styles/students/singleStudent/updateStudent.module.css
+++ b/app/styles/students/singleStudent/updateStudent.module.css
@@ -13,7 +13,7 @@
 }
 
 .modalContent {
-    background: #D1E8E2;
+    background: #c6e7e7;
     padding: 20px;
     width: 600px;
     border-radius: 10px;
@@ -59,7 +59,7 @@
 }
 
 .formGroup input, .formGroup select {
-    padding: 8px;
+    padding: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -86,5 +86,6 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-left: 90px;
+    justify-content: flex-end;
+   margin-left: 480px;
 }
