--- a/app/styles/card/card.module.css
+++ b/app/styles/card/card.module.css
@@ -65,9 +65,9 @@
 }
 
 .color3 {
-  background-color: #000000;
+  background-color: #ff7211;
 }
 
 .color4 {
-  background-color: #ff7211;
+  background-color: #1b9392;
 }
