--- a/app/styles/card/projectcard.module.css
+++ b/app/styles/card/projectcard.module.css
@@ -48,11 +48,11 @@
 }
 
 .color2 {
-    background-color: #121212;
+    background-color: #1b9392;
 }
 
 .color3 {
-    background-color: #000000;
+    background-color: #ff7211;
 }
 
 .color4 {
