--- a/app/styles/dashboards/dashboard.module.css
+++ b/app/styles/dashboards/dashboard.module.css
@@ -8,7 +8,7 @@
 
 
 .menu {
-  min-height: 100%;
+  min-height: 100vh;
   /*background-color: #1E88E5;*/
   width: 250px;
   margin-right: 0;
@@ -125,4 +125,39 @@
   font-size: 20px;
   font-weight: bold;
   margin-top: -30px;
+}
+
+/*Responsive*/
+@media (min-width: 1600px) {
+  .wrapper {
+    gap: 20px; /* Add more space between columns */
+    margin-right: 20px;
+  }
+
+  .menu {
+    width: 300px; /* Increase sidebar width */
+  }
+
+  .contents {
+    grid-template-columns: repeat(3, 1fr); /* Change to 3 columns for larger screens */
+    gap: 40px; /* Decrease gap between items */
+  }
+
+  .containercard {
+    height: 250px; /* Increase card height */
+  }
+
+  .containercards {
+    height: 350px; /* Increase project card height */
+    width: 600px; /* Increase width for larger screens */
+  }
+
+  .calendars {
+    grid-template-columns: repeat(3, 1fr); /* Display 3 columns for the calendar section */
+    gap: 30px;
+  }
+
+  .calendarContainer {
+    max-width: 400px; /* Increase calendar container size */
+  }
 }
