--- a/app/styles/project/navbar/navbar.module.css
+++ b/app/styles/project/navbar/navbar.module.css
@@ -2,6 +2,7 @@
 .navbarPage{
   color: white;
   padding: 10px;
+  margin-top: 25px;
 }
 
 .navbarPage h1{
@@ -17,8 +18,8 @@
     color: white;
   }
   .brand h1{
-    font-size: 18px;
-    color: #1e90ff;
+    font-size: 25px;
+    color: #1B9392;
   }
   
   .navLinks {
@@ -29,7 +30,8 @@
   .navLinks button {
     background: none;
     border: none;
-    color: white;
+    color: #ffffff;
+    background-color: #ff7211;
     cursor: pointer;
     font-size: 1rem;
     padding: 0.5rem 1rem;
@@ -38,7 +40,7 @@
   }
   
   .navLinks button:hover {
-    background-color: #1e90ff;
+    background-color: #cc5b0e;
   }
   
   .navLinks .active {
