--- a/app/styles/dashboards/project/dashboard.module.css
+++ b/app/styles/dashboards/project/dashboard.module.css
@@ -5,14 +5,20 @@
  }
 
 .menu {
-  flex: 1;
-  background-color: var(--bgSoft);
+  /* flex: 1; */
+  /* background-color: #000000; */
    min-height: 100vh;
 }
 
+ .contents{
+    /* flex: 4; */
+    padding: 15px;
+
+} 
+
 .content {
   /* flex: 4; */
-  padding: 15px;
+  /* padding: 15px; */
  
  }
 
