--- a/app/styles/project/projectCard.module.css
+++ b/app/styles/project/projectCard.module.css
@@ -1,21 +1,20 @@
 .projectCard {
-    background-color: var(--secondary-bg);
-    border-radius: var(--border-radius);
+    
+    
     padding: var(--padding);
     margin: 10px;
-    color: var(--text-color);
+    color:white;
     box-shadow: var(--shadow);
-    width: 200px;
-    height: 150px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+   
 }
 
 .projectCard:hover {
-    transform: translateY(-5px);
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+
+    color: black;
 }
 
 .projectCard h3 {
@@ -53,5 +52,6 @@
         width: 100%;
         height: auto; /* Adjust height for smaller screens */
         padding: 10px;
+        
     }
 }
