add project form

--- a/app/styles/dashboards/project/dashboard.module.css
+++ b/app/styles/dashboards/project/dashboard.module.css
@@ -41,7 +41,10 @@
 .dashboardContainer {
   display: flex;
   flex-direction: column;
-  /* background-color: #1B9392; */
+   margin-left: -30px;
+  padding-left: 12px;
+  padding-right: 12px;
+
 
  }
 
@@ -86,6 +89,7 @@
 }
 .header h1{
   font-size: 1.5em;
+
   
 }
 
@@ -136,7 +140,7 @@
 .cardContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+   gap: 10px;
 }
 
 .projectCard {
@@ -218,7 +222,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
-}
+ }
 
 .editModalContent {
   background: #fff;
