--- a/app/styles/project/project/project.module.css
+++ b/app/styles/project/project/project.module.css
@@ -363,6 +363,7 @@
     margin-top: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
+    color: #C6E7E7;
 }
 
 .assigneesHeader {
@@ -1250,18 +1251,21 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+ 
 }
 
 .modalContent {
-    background: #ffffff;
+    /* background: #ffffff; */
     padding: 28px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 400px;
     text-align: center;
+    background-color: #C6E7E7;
+
 }
 .modalContent h3{
-    color:teal;
+    color:black;
     font-size: 20px;
     font-weight: 500;
 }
@@ -1270,11 +1274,18 @@
     flex-direction: column;
 }
 .modalContent .divInput label{
-    color: black;
+    color: #1B9392;
     justify-content: flex-start;
     align-self: flex-start;
     margin-top:10px;
 }
+
+
+ /* .divInput input{
+    color: #1B9392;
+     
+} */
+
 /* .modalContent div .modalActions{
     display: flex;
     justify-content: space-between;
@@ -1289,7 +1300,7 @@
 }
 
 .closeButton1 {
-    background-color: #f44336;
+    background-color: #ff7211;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -1298,12 +1309,15 @@
     /* width:50%; */
 }
 
+.closeButton1:hover {
+    background-color: #cc5b0e;
+}
 .closeButton:hover {
     background-color: #e53935;
 }
 
 .addButton1{
-    background-color: #4caf50;
+    background-color: #1B9392;
     color: white;
     padding: 10px 20px;
     border: none;
