--- a/app/styles/chart/chart.module.css
+++ b/app/styles/chart/chart.module.css
@@ -1,9 +1,9 @@
 .container {
-  height: 200px;
+  height: 400px;
   background-color: #f3f3f3;
   padding: 20px;
   border-radius: 10px;
-  width: 350px;
+  width: 50%;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
