--- a/app/styles/staff/todo.module.css
+++ b/app/styles/staff/todo.module.css
@@ -109,7 +109,7 @@
   }
    */
   .addTaskButton {
-    background-color: #1b9392;;
+    background-color: #1b9392;
     color: white;
     padding: 10px 15px;
     border: none;
